# BMSTU-2018-2022

./: README.md
C (2-3 semester)/lab_01_0_4/: main.c  test.txt
C (2-3 semester)/lab_01_1_1/: main.c
C (2-3 semester)/lab_02_1_1/: test.txt
C (2-3 semester)/lab_02_2_2/: main.c  test.txt
C (2-3 semester)/lab_02_3_3/: main.c  test.txt
C++ OOP (4 semester)/lab_1/: CMakeLists.txt  action.cpp  adjacency_matrix.cpp  adjacency_matrix.h  adjacency_matrix_memory.cpp  check_size.cpp  coordinate_adj_matrix.txt  dot.cpp  draw.cpp  file.h  line.cpp  line.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h  model_manager.h  my_math.cpp  my_math.h  size.cpp  view.h
Course Project (6 semester)/: README.md
Course Project Web (7 semester)/: README.md
Diplom/: baseclass.py  detect.py  main.py
Python (1-2 semester)/: calculatorFINAL.py  game.py  sort + Tkinter.py  блок схема.py  график функции.py  задача на массивы.py  защита массива (после каждых трех элементов вставлять их сумму) Естигнеев.py  кол-во перемен знака в массиве.py  найти вхождение слова.py  сумма отрицательных элементов массива + кол-во перемен знака.py  шаровой сегмент.py  эпсилант.py
Python 1 2 semester/: defend_circle.py  gameUFO.py  korni.py  korni_final.py  min_s.py  замена на #.py  защита массива.py  интеграл.py  календарь.py  поворот квадратной матрицы.py  программа вычисления y1 и y2 для x.py  работа с числами, из матрицы в массив.py  ряд с точностью.py  существование треугольника.py  таблица.py  текст Артема Осипова.py  текст.py  треугольник.py  умножение в массиве с условиями.py
(+355 files in other folders)
